# OPES_CVHD-method

./: README.md
docs/: FAMILIARIZATION.md
examples/MCH_py/OPES_CVHD/: data.c7h14  in.CHO.lmp
examples/cu_vacancy/CVHD/: after.data  cu.in
examples/cu_vacancy/OPES_CVHD/: after.data  cu.in
examples/styryl/: acc.1.lmp  data.c5
gif_make/: readme.md
gif_make/CVHD/: COLVAR  HILLS  gifmaker.mlx  sumhills.m
gif_make/OPES_CVHD/: COLVAR  KERNELS  OPES.m  gifmaker.mlx
lammps_plugin_kokkos/: CMakeLists.txt  Makefile  README.md  cvhd_global_distortion_plugin.cpp  cvhd_global_distortion_v3k.cfg  fix_cvhd_global_distortion.cpp  fix_cvhd_global_distortion.h  fix_cvhd_global_distortion_kokkos.cpp  fix_cvhd_global_distortion_kokkos.h
src/: CVHDM.cpp  GlobalDistortion.cpp  OPESmetadCV.cpp
